fix: Correct issue with name in header section overflowing container

--- a/portfolio/static/main.css
+++ b/portfolio/static/main.css
@@ -36,6 +36,11 @@
 	section {
 		min-width: 100%;
 	}
+
+	#name {
+		font-size: 1.5em;
+		align-self: center;
+	}
 }
 
 @media only screen and (min-width: 401px) and (max-width: 600px) {
@@ -76,6 +81,11 @@
 	section {
 		min-width: 280px;
 	}
+
+	#name {
+		font-size: 2em;
+		margin: 10px 5px 10px 5px;
+	}
 }
 
 @media only screen and (min-width: 601px) {
@@ -114,6 +124,11 @@
 	section {
 		min-width: 280px;
 	}
+
+	#name {
+		font-size: 2em;
+		margin: 10px 5px 10px 5px;
+	}
 }
 
 #container {
@@ -141,11 +156,6 @@ img {
 	max-width: 100%;
 	max-height: 100%;
 	border-radius: 200px;
-}
-
-#name {
-	font-size: 30px;
-	margin: 10px 5px 10px 5px;
 }
 
 #icons {
